--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -24,6 +24,8 @@
 - [游戏对战系列](#游戏对战系列)
   - [486. 预测赢家](#486-预测赢家)
   - [877. 石子游戏](#877-石子游戏)
+- [背包问题系列](#背包问题系列)
+  - [416. 分割等和子集](#416-分割等和子集)
 - [Others](#others)
   - [10. 正则表达式 [Hard *]](#10-正则表达式-hard-)
   - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
@@ -120,7 +122,7 @@ vector<int> dp(bagweight + 1, 0);
 
 for (int i = 0; i < weight.size(); i++) {
     for (int j = bagweight; j >= weight[i]; j--) {
-        dp[j] = max(dp[j], dp[j - weight[i]]);
+        dp[j] = max(dp[j], dp[j - weight[i]]+values[i]);
     }
 }
 cout << dp[bageweight];
@@ -958,6 +960,90 @@ public:
 };
 ```
 
+
+## 背包问题系列
+- https://leetcode-cn.com/problems/partition-equal-subset-sum/solution/bang-ni-ba-0-1bei-bao-xue-ge-tong-tou-by-px33/
+### 416. 分割等和子集
+> 一个 只包含正整数 的 非空 数组 nums 。请你判断是否可以将这个数组分割成两个子集，使得两个子集的元素和相等
+
+```
+输入：nums = [1,5,11,5]
+输出：true
+解释：数组可以分割成 [1, 5, 5] 和 [11] 
+```
+- 分析： 寻找子集得到和为sum/2的子集
+- 单纯通过排序后进行截取的求解方法存在很多反例，本题还是要通过动态规划问题进行求解：
+  - 可以将问题转换成01背包问题：**从n个元素中选取若干个构成sum/2的问题，每个元素只能使用一次**
+  - `dp[i][j]` 从下标为0~i的元素中选取若干个，**是否存在一种方案使其和等于j** （与标准01背包略有差异，但形式基本一致）
+  - 状态转移公式： `dp[i][j] = dp[i-1][j] | dp[i-1][j-nums[i]` 通过或来判断是否成立
+  - 初始化： `dp[i][0] = true` `dp[0][nums[0]] = true`;
+- 特殊情况：
+  - 当sum为奇数时，显然无法成立
+  - 当数组最大值大于sum/2时，也无法成立
+- 时间复杂度 O(N^2) 空间复杂度 O(N^2)
+
+```c++
+class Solution {
+public:
+    bool canPartition(vector<int>& nums) {
+        int sum = 0;
+        int _m = 0;
+        for (auto p : nums) {
+            sum += p;
+            _m = max(_m, p);
+        }
+        if (sum % 2 == 1) return false;
+        int target = sum / 2;
+        if (target < _m) return false;
+        int n = nums.size();
+        vector<vector<int>> dp(n, vector<int> (target + 1));
+        for (int i = 0; i < n; i++) {
+            dp[i][0] = true;
+        }
+        dp[0][nums[0]] = true;
+        for (int i = 1; i < n; i++) {
+            for (int j = 0; j <= target; j++) {
+                if (j < nums[i]) {
+                    dp[i][j] = dp[i-1][j];
+                }
+                else {
+                    dp[i][j] = dp[i-1][j] | dp[i-1][j-nums[i]];
+                }
+            }
+            cout << i;
+        }
+        return dp[n-1][target];
+    }
+};
+```
+- 按照滚动数组进行空间优化， 可以看到下面的形式：
+  - `dp[j] = dp[j] | dp[j - nums[i]]`
+  - 代码基本与01背包一致， 需要注意内外循环的写法，内循环要逆序遍历，避免结果覆盖
+```c++
+class Solution {
+public:
+    bool canPartition(vector<int>& nums) {
+        int sum = 0;
+        int _m = 0;
+        for (auto p : nums) {
+            sum += p;
+            _m = max(_m, p);
+        }
+        if (sum % 2 == 1) return false;
+        int target = sum / 2;
+        if (target < _m) return false;
+        int n = nums.size();
+        vector<int> dp(target + 1);
+        dp[0] = true;
+        for (int i = 0; i < n; i++) {
+            for (int j = target; j >= nums[i]; j--) {
+               dp[j] = dp[j] | dp[j-nums[i]]; 
+            }
+        }
+        return dp[target];
+    }
+};
+```
 
 ## Others
 
