--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -26,6 +26,7 @@
   - [84. 柱状图中的最大面积](#84-柱状图中的最大面积)
   - [85. 最大矩形](#85-最大矩形)
   - [915. 分割数组](#915-分割数组)
+  - [1013. 将数组分成和相等的三个部分](#1013-将数组分成和相等的三个部分)
   - [15. 三数之和 3Sum [Medium]](#15-三数之和-3sum-medium)
   - [16. 最接近的三数之和](#16-最接近的三数之和)
   - [18. 四数之和](#18-四数之和)
@@ -1113,6 +1114,44 @@ public:
     } 
 };
 ```
+### 1013. 将数组分成和相等的三个部分
+> **一个整数数组** arr，只有可以**将其划分为三个和相等的 非空 部分**时才返回 true，否则返回 false。
+> 形式上，如果可以找出索引 i + 1 < j 且满足 `(arr[0] + arr[1] + ... + arr[i] == arr[i + 1] + arr[i + 2] + ... + arr[j - 1] == arr[j] + arr[j + 1] + ... + arr[arr.length - 1])` 就可以将数组三等分。
+
+- 按照题目提示， 只需要寻找两个切分点即可， 1/3和2/3点即可，**同时需要保证第三部分的存在**
+  - 寻找切分点时，使用累加的方式进行寻找，找到前两个即可停止，避免后面会重复计算
+- 时间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    bool canThreePartsEqualSum(vector<int>& arr) {
+        int sum = 0;
+        int _m = INT_MIN;
+        for (auto p : arr) {
+            sum += p;
+            _m = max(_m, p);
+        }
+        int target = sum / 3;
+        if (sum % 3 != 0) return false;
+        //if (_m > target) return false;
+        int cur = 0;
+        int cnt = 1;
+        for (int i = 0; i < arr.size(); i++) {
+            cur += arr[i];
+            if (cur == target * cnt) {
+                cnt++;
+                if (cnt == 3 && i < arr.size() - 1) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+};
+```
+
+
 ### 15. 三数之和 3Sum [Medium]
 > 从无序数组中找出三个非重复元素和等于目标值
 
