--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -31,11 +31,11 @@
     - [自顶而下](#自顶而下)
     - [自底而上](#自底而上)
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
-  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度)
+  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度-)
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
   - [429. N叉树的层序遍历](#429-n叉树的层序遍历)
   - [222. 完全二叉树的节点个数](#222-完全二叉树的节点个数)
-  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树)
+  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
   - [100. 相同二叉树](#100-相同二叉树)
   - [101. 对称二叉树](#101-对称二叉树)
   - [662. 二叉树的最大宽度](#662-二叉树的最大宽度)
@@ -58,16 +58,17 @@
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
   - [offer54. 二叉搜索树的第k大节点](#offer54-二叉搜索树的第k大节点)
-  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素-medium)
-  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像-反转二叉树)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
   - [513. 找树左下角的值](#513-找树左下角的值)
-  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点)
+  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
   - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
+- [99. 恢复二叉搜索树](#99-恢复二叉搜索树)
   - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
@@ -2090,8 +2091,143 @@ public:
 };
 ```
 
+## 99. 恢复二叉搜索树
+> 给定二叉搜索树， **树中两个节点被错误交换。** 在不改变结构的情况下，恢复这颗树。
 
+- 只需定位错误节点位置即可，存在两种情况：
+  - 相邻的两个节点错误交换 `[1, 2 ,3 ,4 ] => [1, 3, 2, 4]`
+  - 非相邻的两个节点交换
+- 通过遍历有序数组即可得到对应的错误节点, 然后进行节点值交换即可
+- 本质上分两步：
+  - 1. 遍历得到有序数组
+  - 2. 线性遍历有序数组确定错误节点，进行交换
+- 时间复杂度 O(N) 空间复杂度 O(N)
+- 关键点： **`异常节点判断`** **`morris遍历与普通递归遍历`**
+```c++
+class Solution {
+public:
+    vector<TreeNode*> nodes;
+    void inorder(TreeNode* root) {
+        if (!root) return;
+        inorder(root -> left);
+        nodes.push_back(root);
+        inorder(root -> right);
+    }
 
+    void recoverTree(TreeNode* root) {
+        if (!root) return;
+        inorder(root);
+        TreeNode* x = nullptr;
+        TreeNode* y = nullptr;
+        for (int i = 0; i < nodes.size() - 1; i++) {
+            if (nodes[i] -> val > nodes[i+1] -> val) {
+                y = nodes[i + 1];
+                if (x == nullptr) {
+                    x = nodes[i];
+                }
+            }
+        }
+        if (x != nullptr && y != nullptr) {
+            swap(x -> val, y -> val);
+        }
+    }
+};
+```
+- **进一步，我们可以通过递归的方式，省掉显式取数组的空间**
+  - 但递归的方式仍然涉及到递归栈空间，不是真正的常数级空间
+  - 常数级空间还得看morris 
+```c++
+class Solution {
+public:
+    TreeNode* pre = nullptr;
+    void inorder(TreeNode* root, TreeNode* &x, TreeNode* &y) {
+        if (!root) return;
+        inorder(root -> left, x, y);
+        if (pre != nullptr) {
+            if (pre -> val > root -> val) {
+                if (x == nullptr) {
+                    x = pre;
+                }
+                y = root;
+            }
+        }
+        pre = root;
+        inorder(root -> right, x, y);
+
+    }
+    void recoverTree(TreeNode* root) {
+        if (!root) return;
+        TreeNode* x = nullptr;
+        TreeNode* y = nullptr;
+        inorder(root, x, y);
+        if (x != nullptr && y != nullptr) {
+            swap(x -> val, y -> val);
+        }
+    }
+};
+```
+- 如何实现常数级别的算法？
+  - Morris遍历 （莫里斯遍历） 利用叶子节点的空指针进行指针调整，避免使用栈结构，实现常数级空间的遍历
+  - Morris遍历主要逻辑：
+    - 寻找左子树的最右节点(叶子节点)，将最右节点right指向root
+    - 相当于进行方向线索设置
+    - 为了避免进行循环，还要进行循环控制
+  - 空间复杂度 O(1)
+
+```c++
+class Solution {
+public:
+    void recoverTree(TreeNode* root) {
+        if (!root) return;
+        TreeNode* x = nullptr;
+        TreeNode* y = nullptr;
+        TreeNode* pre = nullptr;
+        
+        // morris 遍历
+        while (root != nullptr) {
+            TreeNode* tmp = root -> left;
+            if (tmp != nullptr) {
+                // 避免进入循环 
+                while (tmp -> right && tmp -> right != root) {
+                    tmp = tmp -> right;
+                }
+                // 子树右节点为空 进行root连接
+                if (tmp -> right == nullptr) {
+                    tmp -> right = root;
+                    root = root -> left;
+                }
+                else {
+                    // 进行异常节点记录  morris遍历之外的逻辑
+                    if (pre != nullptr && pre -> val > root -> val) {
+                        y = root;
+                        if (x == nullptr) {
+                            x = pre;
+                        }
+                    }
+                    pre = root;
+
+                    // 出现循环情况
+                    tmp -> right = nullptr;
+                    root = root -> right; // 进入右子树
+                }
+            }
+            else {
+                if (pre != nullptr && pre -> val > root -> val) {
+                    y = root;
+                    if (x == nullptr) {
+                        x = pre;
+                    }
+                }
+                pre = root;
+                root = root -> right; // 没有左节点 就访问左节点
+            }
+        }
+        if (x != nullptr && y != nullptr) {
+            swap(x -> val, y -> val);
+        }
+    }
+};
+```
 
 ### 617. 合并二叉树
 > 给定两个二叉树，想象当你将它们中的一个覆盖到另一个上时，两个二叉树的一些节点便会重叠; 合并的规则是如果**两个节点重叠，那么将他们的值相加作为节点合并后的新值**，否则不为 NULL 的节点**将直接作为新二叉树的节点**。
