--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -13,6 +13,7 @@
   - [67. 二进制求和](#67-二进制求和)
   - [补充. 字符串相减（大数减法）](#补充-字符串相减大数减法)
   - [补充. 36进制加法 [字节]](#补充-36进制加法-字节)
+  - [166. 分数到小数](#166-分数到小数)
   - [306. 累加数](#306-累加数)
   - [344.反转字符串](#344反转字符串)
   - [剑指 Offer 58 - II. 左旋转字符串](#剑指-offer-58---ii-左旋转字符串)
@@ -489,6 +490,74 @@ public:
     }
 };
 ```
+### 166. 分数到小数
+> 给定两个整数，分别表示分数的分子 numerator 和分母 denominator，以 字符串形式返回小数 。
+如果**小数部分为循环小数**，则将循环的部分括在括号内。
+如果存在多个答案，只需返回 任意一个 。
+
+```
+输入：numerator = 1, denominator = 2
+输出："0.5"
+输入：numerator = 4, denominator = 333
+输出："0.(012)"
+```
+- 直接使用长除法进行解决即可，问题关键在于对多种情况的把握
+  - 小数点前的整数位： 先进行一次整除运算得到整数位情况
+  - 小数点后的小数位： 循环长除法：
+    - `tmp = rs / den`
+    - `rs = rs % den * 10` 
+  - 循环节的判断： 使用哈希表进行记录，**判断有无相同的余数出现**： 注意记录的是余数，而非直接对小数结果做处理
+  - 正负号的处理： 先进行abs处理, 最后进行负号添加即可
+  - 整数溢出问题: 使用`long long`
+- 关键点： **`临界情况的考虑`**
+```c++
+class Solution {
+public:
+    string fractionToDecimal(int numerator, int denominator) {
+        string res = "0";
+        if (numerator == 0) return res;
+        // long division 
+        string rem;
+        bool f1 = numerator > 0;
+        bool f2 = denominator > 0;
+        long long num = abs(numerator); // 避免整数溢出
+        long long den = abs(denominator);
+        res = to_string(num / den); // 小数点前面位置
+        long long rs = num % den * 10;
+        int index = 0;
+        unordered_map<int, int> us;
+        vector<int> reminders;
+        long long tmp = 0;
+        while (rs != 0 && us.count(rs) < 1) {
+            reminders.push_back(rs); // 记录循环节
+            us[rs] = index;
+            index++;
+            tmp = rs / den;
+            rem += to_string(tmp);
+            rs = rs % den * 10; // 
+           
+        }
+        if (rs == 0) {
+            if (!rem.empty()) res += "." + rem;
+        }
+        else {
+            int cur = us[rs];
+            res += ".";
+            res += rem.substr(0, cur);
+            res += "(";
+            res += rem.substr(cur, index - cur + 1);
+            res += ")";
+        }
+        if ( f1 != f2) {
+            return "-" + res;
+        }
+        return res;
+
+    }
+};
+```
+
+
 
 ### 306. 累加数
 > 一个有效的累加序列必须至少包含 3 个数。除了最开始的两个数以外，字符串中的其他数都等于它之前两个数相加的和。 给定一个只包含数字 '0'-'9' 的字符串，编写一个算法来判断给定输入是否是累加数。
