--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -7,6 +7,7 @@
   - [118. 杨辉三角](#118-杨辉三角)
   - [119. 杨辉三角 II](#119-杨辉三角-ii)
   - [498. 对角线遍历](#498-对角线遍历)
+  - [238. 除自身以外数组的乘积](#238-除自身以外数组的乘积)
 - [旋转问题](#旋转问题)
     - [48.旋转图像](#48旋转图像)
   - [189. 旋转数组](#189-旋转数组)
@@ -300,7 +301,7 @@ public:
 - 与螺旋矩阵遍历有相似之处，都在考察对数组和矩阵的基本操作逻辑
 - 对角线遍历方式： **即保持： （x+y = k） 控制x 和 y 不超过合法范围即可**
 
-```
+```c++
 class Solution {
 public:
     vector<int> findDiagonalOrder(vector<vector<int>>& mat) {
@@ -327,6 +328,79 @@ public:
     }
 };
 ```
+### 238. 除自身以外数组的乘积
+> 一个长度为 n 的整数数组 nums，其中 n > 1，返回输出数组 output ，其中 output[i] 等于 nums 中除 nums[i] 之外其余各元素的乘积。
+
+- 计算前缀积和后缀积即可，注意前/后缀的灵魂设置，默认位置的设置
+- 但空间复杂度为 O(N); 本题更关键的考察点在于空间的优化上，能否优化为常数级别的空间复杂度
+
+```c++
+class Solution {
+public:
+    vector<int> productExceptSelf(vector<int>& nums) {
+        vector<int> ans(nums.size());
+        // 乘积前缀
+        vector<int> prefix(nums.size());
+        vector<int> suffix(nums.size());
+        int pre = 1;
+        for (int i = 0; i < prefix.size(); i++) {
+            prefix[i] = pre * nums[i];
+            pre = prefix[i];
+        }
+        pre = 1;
+        for (int i = nums.size() - 1; i >= 0; i--) {
+            suffix[i] = pre * nums[i];
+            pre = suffix[i];
+        }
+        // 前后缀的灵魂设置
+        suffix.push_back(1); //
+        prefix.insert(prefix.begin(), 1); //
+        for (int i = 0; i < nums.size(); i++) {
+            ans[i] = prefix[i] * suffix[i+1];
+        }
+        return ans;
+    }
+};
+```
+- 我们尝试直接在两次遍历过程中，直接计算前缀/后缀， 进行原地更新，而不是使用额外数组进行存储
+  - 空间复杂度 O(1)
+  - 注意点： **`临时变量的设置，要避免重复值`**
+
+```c++
+class Solution {
+public:
+    vector<int> productExceptSelf(vector<int>& nums) {
+        vector<int> ans(nums.size());
+        int pre = 1;
+        for (int i = 0; i < nums.size(); i++) {
+            if (i == 0) {
+                ans[i] = pre;
+            }
+            else {
+                ans[i] = pre * nums[i - 1];
+                pre = ans[i];
+            }
+           // cout << ans[i] << " ";
+        }
+        cout << endl;
+        pre = 1;
+        for (int i = nums.size() - 1; i >= 0; i--) {
+            if (i == nums.size() - 1) {
+                ans[i] *= pre;
+            }
+            else {
+                ans[i] *= pre * nums[i+1];
+                // 避免重复 这个地方的pre跟第一遍遍历还是有区别的
+                pre = pre * nums[i + 1]; 
+            }
+            //cout << ans[i];
+        }
+
+        return ans;
+    }
+};
+```
+
 ## 旋转问题
 #### 48.旋转图像
 > 给定一个 n × n 的二维矩阵 matrix 表示一个图像。请你将图像顺时针旋转 90 度。
