--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -456,7 +456,7 @@ public:
 ### 111. 二叉树的最小深度 *
 - 问题关键：**`找到叶子节点，左右子树都空的点`**，不能照搬最大深度的写法
 - 自顶而上的递归写法 **后序遍历**
-- 
+- 主要是避免，树只有左节点下，没有区分左右子树节点分布，会导致结果计算错误
 ```c++
 class Solution {
 public:
