前中序生成后序

--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -43,8 +43,9 @@
   - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
   - [109. 有序链表转换为二叉搜索树](#109-有序链表转换为二叉搜索树)
   - [106.从中序和后序中构建二叉树](#106从中序和后序中构建二叉树)
-  - [先序加中序构建二叉树](#先序加中序构建二叉树)
+  - [105. 先序加中序构建二叉树](#105-先序加中序构建二叉树)
   - [889. 先序加后序构建二叉树](#889-先序加后序构建二叉树)
+  - [补充题. 中序和后序序列计算前序序列 [字节/华为]](#补充题-中序和后序序列计算前序序列-字节华为)
   - [116. 填充每个节点的下一个右侧节点指针 I](#116-填充每个节点的下一个右侧节点指针-i)
   - [117. 填充每个节点的下一个右侧节点指针 II](#117-填充每个节点的下一个右侧节点指针-ii)
   - [114. 二叉树展开为链表](#114-二叉树展开为链表)
@@ -957,7 +958,7 @@ public:
 };
 ```
 
-### 先序加中序构建二叉树
+### 105. 先序加中序构建二叉树
 
 - 构建方法：根据先序数组获得根节点值，并对中序数组建立节点值-索引的哈希表
 - 每次从先序表中取root值，然后对应的从中序表中获取对应的索引，从而得到划分左右子树的index
@@ -993,7 +994,7 @@ public:
 ```
 
 ### 889. 先序加后序构建二叉树
-> 返回与给定的前序和后序遍历匹配的任何二叉树。pre 和 post 遍历中的值是不同的正整数。
+> 返回与给定的前序和后序遍历匹配的任何二叉树。**pre 和 post 遍历中的值是不同的正整数**。
 
 - 基于先序和后序的关键在于如何**定位后面要搜索的左子树和右子树空间**
 
@@ -1007,6 +1008,7 @@ public:
         TreeNode* root = new TreeNode(pre[pre_start]);
         if (pre_start == pre_end)  return root;
         int index = post_start;
+        // 寻找边界
         while (pre[pre_start + 1] != post[index]) {
             index++;
         }
@@ -1022,6 +1024,63 @@ public:
     }
 };
 ```
+### 补充题. 中序和后序序列计算前序序列 [字节/华为]
+> 给出二叉树的中序遍历数组和后序数组，直接计算前序遍历的数组
+
+- 基本做法可以参考利用中序后序 构造二叉树的逻辑，但**本题可以省去建树的过程**
+- 只在合适的地方进行节点输出，以得到目标的前序数组
+```c++
+class Solution {
+public:
+    TreeNode* buildTree(vector<int>& inorder, vector<int>& postorder) {
+        return pre_order(0, inorder.size() - 1, 0, inorder.size() - 1, inorder, postorder);
+    }
+    // 根据后序和中序推出前序序列
+    // 不用建树 直接在递归中输出即可
+    vector<int> ans;
+    void pre_order(int leftin, int rightin, int leftpost, int rightpost, vector<int> &in, vector<int> &post) {
+        if (leftin > rightin) return nullptr;
+        ans.push_back(post[rightpost]);
+        cout << post[rightpost] << endl; // 前序输出当前元素
+        int rootin = leftin;
+        // 寻找中序位置
+        while (rootin <= rightin && in[rootin] != post[rightpost]) rootin++;
+        int left = rootin - leftin;
+        
+        pre_order(leftin, rootin - 1, leftpost, leftpost + left - 1, in, post);
+        pre_order(rootin + 1, rightin, leftpost + left, rightpost - 1, in, post);
+        return nullptr;
+    }
+};
+```
+- 同理： 对于先序加中序序列生成后序序列
+  - 调整输出位置即可
+```c++
+class Solution {
+public:
+    void buildTree(vector<int>& preorder, vector<int>& inorder) {
+        postOrder(preorder, inorder, 0, preorder.size() - 1, 0, inorder.size() - 1);
+    }
+    vector<int> ans;
+    void postOrder(vector<int>& preorder, vector<int>& inorder, int preL, int preR, int inL, int inR) {
+        if (inL > inR) return nullptr;
+        int val = preorder[preL];
+        int index = inL;
+        // 搜索先序元素在中序中的位置
+        while (index <= inR && inorder[index] != preorder[preL]) {
+            index++;
+        }
+        // 记录移动长度， 以进行递归范围调整
+        int len = index - inL;
+        postOrder(preorder, inorder, preL + 1, preL + len, inL, index - 1);
+        postOrder(preorder, inorder, preL + len + 1, preR, index + 1, inR);
+        cout << val << endl; 
+        ans.push_back(val); // 
+        return root;
+    }
+};
+```
+
 
 ### 116. 填充每个节点的下一个右侧节点指针 I
 > 填充它的每个 next 指针，让这个指针指向其下一个右侧节点。如果找不到下一个右侧节点，则将 next 指针设置为 NULL。 （**给的是完全二叉树**）
