--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -48,6 +48,7 @@
   - [343. 整数拆分](#343-整数拆分)
   - [1143. 最长公共子序列 *](#1143-最长公共子序列-)
   - [887. 鸡蛋掉落 [面试**]](#887-鸡蛋掉落-面试)
+    - [1235. 规划兼职工作](#1235-规划兼职工作)
 
 ## 基础问题
 ### 0-1背包问题
@@ -2023,3 +2024,74 @@ public:
 扔 3 次，确定 2 + 2 + 3 个 F，也就是 (7 - 1 = 6) 个 N。
 即：1 + 2 + 3 + ... + 14 > 100
 所以答案是 14 次
+
+
+#### 1235. 规划兼职工作
+> n份兼职工作，每份工作预计从 startTime[i] 开始到 endTime[i] 结束，报酬为 profit[i]。
+给你一份兼职工作表，包含开始时间 startTime，结束时间 endTime 和预计报酬 profit 三个数组，**请你计算并返回可以获得的最大报酬**。
+时间上出现重叠的 2 份工作不能同时进行。
+
+- 比较复杂的规划问题：
+  - `dp[i][0]` 第i份工作不做的最大收益
+  - `dp[i][1]` 第i份工作做的最大收益
+  - `dp[i][0] = max(dp[i-1][0],dp[i-1][1])`
+  - `dp[i][1] = max(dp[pre[i]][0]+profit[i],dp[pre[i]][1]+profit[i])`
+    - `pre[i]`即第i份工作的上一个近邻任务
+  - 表示定义整合：
+    - `dp[i]` 表示**从第0到第i份工作的最大收益**， 其取决于前i-1份工作中的收益情况以及`dp[pre]`当前第i份工作的上一个近邻任务的收益情况
+    - `dp[i] = max(dp[i-1], dp[pre] + p[i])`
+- 其他:
+  - 利用结构体，**根据任务的结束时间进行升序排列**: 便于计算上一个任务
+  - 初始化`dp[0]=p[0]`
+
+- 时间复杂度 O(NlogN) 空间复杂度O(N)
+```c++
+class Solution {
+public:
+    struct Job {
+        int beg;
+        int end;
+        int profit;
+        bool operator < (const Job& x) const {
+            return end < x.end; // 根据结束时间升序排序
+        }
+    };
+    // 二分法找到上界， 第一个结束时间大于目标任务开始时间的任务index
+    // 利用 index-1 来确定实际的最近邻任务
+    int my_upper_bound(vector<Job>& jobs, int target) {
+        int left = 0;
+        int right = jobs.size() - 1;
+        
+        while (left <= right) {
+            //cout << left << " " << right << endl;
+            int mid = (left + right) >> 1;
+            
+            if (jobs[mid].end <= target) {
+                left = mid + 1;
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        return left;
+    }
+    int jobScheduling(vector<int>& startTime, vector<int>& endTime, vector<int>& profit) {
+        int n = startTime.size();
+        vector<Job> jobs(n);
+        for (int i = 0; i < n; i++) {
+            jobs[i].beg = startTime[i];
+            jobs[i].end = endTime[i];
+            jobs[i].profit = profit[i];
+        }
+        sort(jobs.begin(), jobs.end());
+        vector<int> dp(n);
+        dp[0] = jobs[0].profit;
+        for (int i = 1; i < n; i++) {
+            int index = my_upper_bound(jobs, jobs[i].beg) - 1; 
+            // 对于没有近邻任务的进行特殊判断
+            dp[i] = index < 0 ? max(dp[i-1], jobs[i].profit) : max(dp[i-1], dp[index] + jobs[i].profit);
+        }
+        return dp[n-1];
+    }
+};
+```
