--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -24,6 +24,7 @@
 - [游戏对战系列](#游戏对战系列)
   - [486. 预测赢家](#486-预测赢家)
   - [877. 石子游戏](#877-石子游戏)
+  - [1563. 石子游戏](#1563-石子游戏)
 - [背包问题系列](#背包问题系列)
   - [416. 分割等和子集](#416-分割等和子集)
 - [Others](#others)
@@ -961,6 +962,62 @@ public:
 };
 ```
 
+### 1563. 石子游戏
+> 石子分两行，Bob 负责计算每一行的值，即此行中所有石子的值的总和。Bob 会丢弃值最大的行，Alice 的得分为剩下那行的值（每轮累加）。**如果两行的值相等，Bob 让 Alice 决定丢弃哪一行**。下一轮从剩下的那一行开始。**只剩下一块石子时，游戏结束**。Alice的分数最初为 0 。返回 Alice 能够获得的最大分数 。
+
+- 博弈问题，dp状态比较清晰：
+  - `dp[i][j]`表示第i和j石子内的最大收益
+  - `sum[i,k] < sum [k+1, j]: dp[i][j] = dp[i][k] + sum[i,k]`
+  - `sum[i,k] > sum [k+1, j]: dp[i][j] = dp[k+1][j] + sum[k+1, j]`
+  - 初始化： 计算前缀和数组用于sum快速计算，注意设置前缀的初始0
+- 使用递归的形式进行实现，对于重复计算的值进行跳过
+  - 记忆化搜索
+- 关键点： **`递归方式实现`**
+
+```c++
+class Solution {
+public:
+    vector<vector<int>> dp;
+    int dfs(vector<int>& stoneValue, vector<int>& preSum, int left, int right) {
+        if (left == right) return 0;
+        // 剪枝操作
+        if (dp[left][right]) {
+            return dp[left][right];
+        }
+        for (int i = left; i < right; i++) {
+            // 分段取前缀和 避免区间重叠
+            int suml = preSum[i + 1] - preSum[left];
+            int sumr = preSum[right + 1] - preSum[i + 1];
+            if (suml < sumr) {
+                dp[left][right] = max(dp[left][right], dfs(stoneValue, preSum, left, i) + suml);
+            } 
+            else if (suml > sumr) {
+                dp[left][right] = max(dp[left][right], dfs(stoneValue, preSum, i + 1, right ) + sumr);
+            }
+            else {
+                dp[left][right] = max(dp[left][right], max(dfs(stoneValue, preSum, left, i) + suml, dfs(stoneValue, preSum, i + 1, right) + sumr));
+            }
+        }
+        return dp[left][right];
+    }
+
+    int stoneGameV(vector<int>& stoneValue) {
+        vector<int> preSum (stoneValue.size());
+        int n = stoneValue.size(); 
+        for (int i = 0; i < n; i++) {
+            if (i == 0) {
+                preSum[i] = stoneValue[0];
+            }
+            else {
+                preSum[i] = stoneValue[i] + preSum[i - 1];
+            }
+        }
+        preSum.insert(preSum.begin(), 0);
+        dp = vector<vector<int>> (n, vector<int>(n));
+        return dfs(stoneValue, preSum, 0, n - 1);
+    }
+};
+```
 
 ## 背包问题系列
 - https://leetcode-cn.com/problems/partition-equal-subset-sum/solution/bang-ni-ba-0-1bei-bao-xue-ge-tong-tou-by-px33/
