--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -41,6 +41,7 @@
   - [349. 两个数组的交集](#349-两个数组的交集)
   - [350. 两个数组的交集II](#350-两个数组的交集ii)
   - [977. 有序数组的平方](#977-有序数组的平方)
+  - [456. 132模式](#456-132模式)
 - [哈希表技巧](#哈希表技巧)
   - [1. 两数之和](#1-两数之和)
   - [36. 有效的数独](#36-有效的数独)
@@ -49,6 +50,10 @@
 - [搜索问题](#搜索问题)
   - [240. 搜索二维矩阵 II [Medium]](#240-搜索二维矩阵-ii-medium)
   - [74. 搜索二维矩阵 I [Medium]](#74-搜索二维矩阵-i-medium)
+- [会议室问题](#会议室问题)
+  - [252. 会议室](#252-会议室)
+  - [253. 会议室II](#253-会议室ii)
+  - [1353. 最多可以参加的会议数目](#1353-最多可以参加的会议数目)
 
 
 ## 遍历问题
@@ -1757,6 +1762,40 @@ public:
     }
 };
 ```
+### 456. 132模式
+> 132 模式的子序列 由三个整数 nums[i]、nums[j] 和 nums[k] 组成，并同时满足：i < j < k 和 nums[i] < nums[k] < nums[j] , 判断序列中是否存在132模式
+
+- 主要寻找`nums[i] < nums[k] < nums[j]`
+- 依靠单调栈进行，**通过递增单调栈**，确定峰值`nums[k]`和`nums[j]`, 
+- 在寻找`nums[i]`时判断其小于历史栈顶元素即可 (第二大数)
+- 上述遍历过程要通过逆序遍历实现，因为132，那么相对来说确定3和2后判断1比较容易。
+
+
+```c++
+class Solution {
+public:
+    bool find132pattern(vector<int>& nums) {
+        stack<int> st;
+        int k = INT_MIN;
+        int n = nums.size(); 
+        // i < j < k  
+        // nums[i] < nums[k] < nums[j]
+        for (int i = n - 1; i >= 0; i--) {
+           // 发现1 
+            if (nums[i] < k) return true;
+            while (!st.empty() && st.top() < nums[i]) {
+                // 记录2
+                k = max(k, st.top());
+                st.pop();
+            }
+            // 记录3
+            st.push(nums[i]);
+        }
+        return false;
+    }
+};
+```
+
 ## 哈希表技巧
 ### 1. 两数之和
 给定数组和目标，找出数组两元素之和为target的元素索引
@@ -2127,3 +2166,146 @@ public:
 
 
 
+## 会议室问题
+
+### 252. 会议室
+> 给定一个会议时间安排的数组 intervals ，每个会议时间都会包括开始和结束的时间 intervals[i] = [starti, endi] ，请你判断一个人是否能够参加这里面的全部会议
+
+- **对时间段进行排序，然后判断相邻段是否有重叠**即可
+- 简单题目
+- 意外发现：
+  - c++中直接调用vector等对象的`size()/length()`，**返回的是`size_t`为`unsigned int`**，如果为0，进行-1操作就会出现长度错误问题
+  - 为了避免此类问题，建议以后还是先用`int`取长度，再进行循环
+```c++
+class Solution {
+public:
+    struct cmp {
+        bool operator() (const vector<int>& a, const vector<int>& b) {
+            return a[1] < b[1]; // 升序
+        }
+    };
+    bool canAttendMeetings(vector<vector<int>>& intervals) {
+        sort(intervals.begin(), intervals.end(), cmp());
+        int n = intervals.size();
+        // 意外发现： 两维数组为空 长度-1 会有bug (size_t为 unsigned int -1 会变成很大的整数)
+
+        for (int i = 0; i < n - 1; i++) {
+            if (intervals[i][1] > intervals[i+1][0]) return false;
+        }
+        // int beg = INT_MAX;
+        // int end = INT_MIN;
+        // for (auto p : intervals) {
+        //     if (p[0] < end || (p[1] > beg && p[1] < end )) return false;
+        //     beg = min(beg, p[0]);
+        //     end = max(end, p[1]);
+        // }
+        return true;
+    }
+};
+```
+
+### 253. 会议室II
+> 会议时间安排的数组 intervals ，每个会议时间都会包括开始和结束的时间 intervals[i] = [starti, endi] ，为避免会议冲突，同时要考虑充分利用会议室资源，请你计算至少需要多少间会议室，才能满足这些会议安排。
+```
+输入：intervals = [[0,30],[5,10],[15,20]]
+输出：2
+```
+
+**理解成上下车问题会比较容易解决**，不用在意是谁上车还是下车，只需要注意什么时候上下车就可以。 以第一个示例来说：
+
+```
+↑    ↑    ↓     ↑      ↓             ↓
+0----5----10----15-----20-----------30-->
+```
+核心思路：
+**上车的最大人数就是会议室占用的最大间数。将上车和下车时间点混合排序**
+1）当上车1个人时，count++ （`start[i] < end[j]`）
+2）当下车1个人时，count--  `start[i] >= end[j]`
+3）每次上下车时，取maxvalue = max(maxvalue,count);
+
+- 关键点： **问题转换为上下车case**
+```c++
+class Solution {
+public:
+    int minMeetingRooms(vector<vector<int>>& intervals) {
+       // 根据会议结束时间进行排序
+       int n = intervals.size();
+       vector<int> start(n);
+       vector<int> end(n);
+        for (int i = 0; i < n; i++) {
+            start[i] = intervals[i][0];
+            end[i] = intervals[i][1];
+        }
+        sort(start.begin(), start.end());
+        sort(end.begin(), end.end()); // 对起始时间分别进行排序
+       // 进行合法时间段合并
+       
+       int i = 0; // 上车
+       int j = 0; // 下车
+       int ans = 1;
+       int cur = 0;
+       while (i < n && j < n) {
+           // 上车时间 < 之前的下车时间： 上车 增加座位
+           if (start[i] < end[j]) {
+               i++;
+               cur++;
+           }
+           else { // 上一个下车时间早于上车时间： 下车 减少座位；
+               cur--;
+               j++;
+           }
+           ans = max(ans, cur);
+       }
+       return ans;
+    }
+};
+```
+
+### 1353. 最多可以参加的会议数目
+> events[i] = [startDayi, endDayi] ，表示会议 i 开始于 startDayi ，结束于 endDayi 
+> 在满足 startDayi <= d <= endDayi 中的任意一天 d 参加会议 i 。**注意，一天只能参加一个会议**。
+请你返回你可以参加的 **最大会议数目**
+
+```
+输入：events = [[1,2],[2,3],[3,4]]
+输出：3
+```
+
+- 安排会议问题，可以用贪心思想进行求解
+- **每次安排结束时间最早的会议参加**，通过优先队列来实现结束时间最早会议的快速查找
+  - 其他细节： 遍历范围： 逐天遍历，找到有会议安排的时间
+  - 对于结束时间<当前起始时间的会议要进行出堆操作
+- 时间复杂度 O(SlogN) 空间复杂度O(S)
+```c++
+class Solution {
+public:
+    int maxEvents(vector<vector<int>>& events) {
+        int maxDay = 0;
+        unordered_map<int, vector<int>> mps; // 记录起始day与结束day的映射
+        for (auto p : events) {
+            maxDay = max(maxDay, p[1]);
+            mps[p[0]].push_back(p[1]);
+        }
+        int ans = 0;
+        priority_queue<int, vector<int>, greater<int>> q; // 小顶堆  记录结束时间
+        for (int i = 1; i <= maxDay; i++) {
+            if (mps.count(i)) {
+                // 插入结束时间
+                for (auto p : mps[i]) {
+                    q.push(p);
+                }
+            }
+            // 起始时间 小于 当前时间的 进行出堆
+            while (!q.empty() && q.top() < i) {
+                q.pop();
+            }
+            // 每次选取当前结束时间最早的会议参加  贪心思想
+            if (!q.empty()) {
+                q.pop();
+                ans++;
+            }
+        }
+        return ans;
+    }
+};
+```
