--- a/图.md
+++ b/图.md
@@ -9,6 +9,7 @@
 - [207. 课程表 [Medium]](#207-课程表-medium)
 - [210. 课程表 II](#210-课程表-ii)
 - [有向无环图问题 [vivo提前批笔试]](#有向无环图问题-vivo提前批笔试)
+- [补充题：检测循环依赖](#补充题检测循环依赖)
 ### 拓扑排序
 - 将一个**有向无环图**(Directed Acyclic Graph简称DAG)进行排序进而得到**一个有序的线性序列**
 
@@ -301,5 +302,49 @@ int main() {
     return 0;
     
     
+}
+```
+
+### 补充题：检测循环依赖
+- https://mp.weixin.qq.com/s/pCRscwKqQdYYN7M1Sia7xA
+  
+> 现有n个编译项，编号为0 ~ n-1。给定一个二维数组，表示编译项之间有依赖关系。如[0, 1]表示1依赖于0。
+若存在循环依赖则返回空；不存在依赖则返回可行的编译顺序。
+
+- 典型的拓扑排序应用，采用bfs方式进行处理
+  - 先计算入度为0的节点，使用队列进行存储
+  - 从入度为0的节点开始，进行入度删减操作，每次出队进行节点记录，即可得到对应的拓扑排序数组
+
+
+```c++
+vector<int> haveCircularDependency(int n, vector<vector<int>> &prerequisites) {
+    vector<vector<int>> g(n); //邻接表存储图结构
+    vector<int> indeg(n); //每个点的入度
+    vector<int> res; //存储结果序列
+    for(int i = 0; i < prerequisites.size(); i ++) {
+        int a = prerequisites[i][0], b = prerequisites[i][1]; 
+        g[a].push_back(b);
+        indeg[b] ++;
+    }
+    queue<int> q;
+    //一次性将入度为0的点全部入队
+    for(int i = 0; i < n; i ++) {
+        if(indeg[i] == 0) q.push(i);
+    }
+    while(q.size()) {
+        int t = q.front();
+        q.pop();
+        res.push_back(t);
+        //删除边时，将终点的入度-1。若入度为0，果断入队
+        for(int i = 0; i < g[t].size(); i ++) {
+            int j = g[t][i];
+            indeg[j] --;
+            if(indeg[j] == 0) {
+                q.push(j);
+            }
+        }
+    }
+    if(res.size() == n) return res;
+    else return {};
 }
 ```
