update binary tree

--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -69,7 +69,7 @@
   - [513. 找树左下角的值](#513-找树左下角的值)
   - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
   - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
-- [99. 恢复二叉搜索树](#99-恢复二叉搜索树)
+  - [99. 恢复二叉搜索树](#99-恢复二叉搜索树)
   - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
@@ -1930,7 +1930,7 @@ public:
 - 层次遍历方法，取最右节点值即可
   - 时间复杂度 O(N) 空间复杂度O(N)
 
-```
+```c++
 class Solution {
 public:
     vector<int> rightSideView(TreeNode* root) {
@@ -2115,8 +2115,8 @@ public:
 > 输入数据 保证 ，新值和原始二叉搜索树中的任意节点值都不同。
 注意，可能存在多种有效的插入方式，只要树在插入后仍保持为二叉搜索树即可。 你可以返回 任意有效的结果 。
 
-- 与二叉搜索树的删除相比， 插入操作相对比较简单
-- 本质上利用BST的节点大小性质，自顶而下进行遍历，寻找插入方向； 在叶子节点位置创建节点完成插入
+- 与二叉搜索树的删除相比， **插入操作**相对比较简单
+- 本质上利用BST的节点大小性质，**自顶而下进行遍历，寻找插入方向**； 在叶子节点位置创建节点完成插入
 
 ```c++
 /**
@@ -2150,7 +2150,7 @@ public:
 };
 ```
 
-## 99. 恢复二叉搜索树
+### 99. 恢复二叉搜索树
 > 给定二叉搜索树， **树中两个节点被错误交换。** 在不改变结构的情况下，恢复这颗树。
 
 - 只需定位错误节点位置即可，存在两种情况：
@@ -2212,7 +2212,6 @@ public:
         }
         pre = root;
         inorder(root -> right, x, y);
-
     }
     void recoverTree(TreeNode* root) {
         if (!root) return;
@@ -2226,7 +2225,7 @@ public:
 };
 ```
 - 如何实现常数级别的算法？
-  - Morris遍历 （莫里斯遍历） 利用叶子节点的空指针进行指针调整，避免使用栈结构，实现常数级空间的遍历
+  - Morris遍历 （莫里斯遍历）**利用叶子节点的空指针进行指针调整**，避免使用栈结构，实现常数级空间的遍历
   - Morris遍历主要逻辑：
     - 寻找左子树的最右节点(叶子节点)，将最右节点right指向root
     - 相当于进行方向线索设置
@@ -2582,12 +2581,13 @@ public:
 
 ### 124. 二叉树中的最大路径和 [Hard]
 
-> 路径 被定义为一条从树中任意节点出发，沿父节点-子节点连接，达到任意节点的序列。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
+> **路径 被定义为一条从树中任意节点出发，沿父节点-子节点连接，达到任意节点的序列**。同一个节点在一条路径序列中 至多出现一次 。该路径 **至少包含一个 节点，且不一定经过根节点。**
 
 > 路径和 是路径中各节点值的总和。 给你一个二叉树的根节点 root ，返回其 最大路径和
 
-- 考虑**递归逻辑**，对于节点root的子树，当前最大路径为和 root值加两侧子树的最大路径， 
+- 考虑**递归逻辑**，对于节点root的子树，当前最大路径为和 **root值加两侧子树的最大路径**， 
   - 而当前树的最大路径，需要考虑是左节点还是右节点构成的
+  - 这是受限于本题二叉树的定义逻辑
 
 - 因此，整体采用**自底而上的逻辑**，即后序遍历，从叶子节点向上推算最大路径和
 - **并在每次计算路径和时动态判断是否为最大值**
@@ -2676,7 +2676,8 @@ public:
         if (root == nullptr) return 0;
         int l = path(root -> left);
         int r = path(root -> right);
-        // 初始化
+        // 初始化 重要！！！！
+        // 为了确保当值不相等时，归0计算
         int al = 0;
         int ar = 0;
         if (root -> left != nullptr && root -> val == root -> left -> val) {
@@ -2697,9 +2698,9 @@ public:
 ```
 
 ### 208. 实现Trie前缀树
->  前缀树 是一种树形数据结构，用于高效地存储和检索字符串数据集中的键
+>  前缀树 是一种树形数据结构，用于**高效地存储和检索字符串数据集中的键**
 
-- 构建：每个节点都是存储小写字母，**构建26叉树即可**
+- 构建：每个节点都是**存储小写字母**，**构建26叉树即可**
   - 为了便于搜索，添加`isword`标志来判断是否达到word结尾
 - 搜索前缀：
   - 进行26叉树dfs遍历，判断是否指针为空
