--- a/topics/T7-二叉搜索树.md
+++ b/topics/T7-二叉搜索树.md
@@ -470,3 +470,231 @@ public:
     }
 };
 ```
+
+
+## 二叉搜索树的增/删/改
+
+
+### 450. 删除二叉搜索树中的节点 *
+> 给定一个二叉搜索树的根节点 root 和一个值 key，**删除二叉搜索树中的 key 对应的节点，并保证二叉搜索树的性质不变**。返回二叉搜索树（有可能被更新）的根节点的引用。
+
+- 经典的二叉树删除问题， 考虑二叉搜索树的特性
+- 关键点在于删除节点后如何替换节点，
+  - 可以**使用右子树的最小节点**替代当前root： **搜索子树的最小值， 然后再在右子树进行删除操作**
+  - 或者使用左子树的最大节点替代当前root： 搜索子树的最大值， 然后再在左子树进行删除操作
+- 关键点： **`替代操作`**
+
+```c++
+class Solution {
+public:
+    int getMin(TreeNode* root) {
+        if (!root) return INT_MAX;
+        return min(root -> val, min(getMin(root -> left), getMin(root -> right)));
+    }
+    TreeNode* deleteNode(TreeNode* root, int key) {
+        if (!root) return nullptr;
+        // 删除的情况
+        if (root -> val == key) {
+            if (!root -> left && !root -> right) {
+                return nullptr;
+            }
+            if (!root -> left) {
+                return root -> right;
+            }
+            if (!root -> right) {
+                return root -> left;
+            }
+            // 使用右子树的最小值来替代删除节点 或者 使用左子树的最大值来替代
+            int minVal = getMin(root -> right);
+            root -> val = minVal;
+            // 递归删除后面要替换的节点 key = minVal; 
+            root -> right = deleteNode(root -> right, minVal);
+        }
+        else if (root -> val < key) {
+            root -> right = deleteNode(root -> right, key);
+        }
+        else {
+            root -> left = deleteNode(root -> left, key);
+        }
+        return root;
+    }
+};
+```
+
+### 701. 二叉搜索树中的插入操作
+> 输入数据 保证 ，新值和原始二叉搜索树中的任意节点值都不同。
+注意，可能存在多种有效的插入方式，只要树在插入后仍保持为二叉搜索树即可。 你可以返回 任意有效的结果 。
+
+- 与二叉搜索树的删除相比， 插入操作相对比较简单
+- 本质上利用BST的节点大小性质，自顶而下进行遍历，寻找插入方向； 在叶子节点位置创建节点完成插入
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    TreeNode* insertIntoBST(TreeNode* root, int val) {
+        if (!root) {
+            return new TreeNode(val);
+        }
+        if (root -> val > val) {
+            // 往左子树插入
+            root -> left = insertIntoBST(root -> left, val);
+
+        }
+        else {
+            // 往右子树插入
+            root -> right = insertIntoBST(root -> right, val);
+        }
+        return root;
+    }
+};
+```
+
+### 99. 恢复二叉搜索树
+> 给定二叉搜索树， **树中两个节点被错误交换。** 在不改变结构的情况下，恢复这颗树。
+
+- 只需定位错误节点位置即可，存在两种情况：
+  - 相邻的两个节点错误交换 `[1, 2 ,3 ,4 ] => [1, 3, 2, 4]`
+  - 非相邻的两个节点交换
+- 通过遍历有序数组即可得到对应的错误节点, 然后进行节点值交换即可
+- 本质上分两步：
+  - 1. 遍历得到有序数组
+  - 2. 线性遍历有序数组确定错误节点，进行交换
+- 时间复杂度 O(N) 空间复杂度 O(N)
+- 关键点： **`异常节点判断`** **`morris遍历与普通递归遍历`**
+```c++
+class Solution {
+public:
+    vector<TreeNode*> nodes;
+    void inorder(TreeNode* root) {
+        if (!root) return;
+        inorder(root -> left);
+        nodes.push_back(root);
+        inorder(root -> right);
+    }
+
+    void recoverTree(TreeNode* root) {
+        if (!root) return;
+        inorder(root);
+        TreeNode* x = nullptr;
+        TreeNode* y = nullptr;
+        for (int i = 0; i < nodes.size() - 1; i++) {
+            if (nodes[i] -> val > nodes[i+1] -> val) {
+                y = nodes[i + 1];
+                if (x == nullptr) {
+                    x = nodes[i];
+                }
+            }
+        }
+        if (x != nullptr && y != nullptr) {
+            swap(x -> val, y -> val);
+        }
+    }
+};
+```
+- **进一步，我们可以通过递归的方式，省掉显式取数组的空间**
+  - 但递归的方式仍然涉及到递归栈空间，不是真正的常数级空间
+  - 常数级空间还得看morris 
+```c++
+class Solution {
+public:
+    TreeNode* pre = nullptr;
+    void inorder(TreeNode* root, TreeNode* &x, TreeNode* &y) {
+        if (!root) return;
+        inorder(root -> left, x, y);
+        if (pre != nullptr) {
+            if (pre -> val > root -> val) {
+                if (x == nullptr) {
+                    x = pre;
+                }
+                y = root;
+            }
+        }
+        pre = root;
+        inorder(root -> right, x, y);
+
+    }
+    void recoverTree(TreeNode* root) {
+        if (!root) return;
+        TreeNode* x = nullptr;
+        TreeNode* y = nullptr;
+        inorder(root, x, y);
+        if (x != nullptr && y != nullptr) {
+            swap(x -> val, y -> val);
+        }
+    }
+};
+```
+- 如何实现常数级别的算法？
+  - Morris遍历 （莫里斯遍历） 利用叶子节点的空指针进行指针调整，避免使用栈结构，实现常数级空间的遍历
+  - Morris遍历主要逻辑：
+    - 寻找左子树的最右节点(叶子节点)，将最右节点right指向root
+    - 相当于进行方向线索设置
+    - 为了避免进行循环，还要进行循环控制
+  - 空间复杂度 O(1)
+
+```c++
+class Solution {
+public:
+    void recoverTree(TreeNode* root) {
+        if (!root) return;
+        TreeNode* x = nullptr;
+        TreeNode* y = nullptr;
+        TreeNode* pre = nullptr;
+        
+        // morris 遍历
+        while (root != nullptr) {
+            TreeNode* tmp = root -> left;
+            if (tmp != nullptr) {
+                // 避免进入循环 
+                while (tmp -> right && tmp -> right != root) {
+                    tmp = tmp -> right;
+                }
+                // 子树右节点为空 进行root连接
+                if (tmp -> right == nullptr) {
+                    tmp -> right = root;
+                    root = root -> left;
+                }
+                else {
+                    // 进行异常节点记录  morris遍历之外的逻辑
+                    if (pre != nullptr && pre -> val > root -> val) {
+                        y = root;
+                        if (x == nullptr) {
+                            x = pre;
+                        }
+                    }
+                    pre = root;
+
+                    // 出现循环情况
+                    tmp -> right = nullptr;
+                    root = root -> right; // 进入右子树
+                }
+            }
+            else {
+                if (pre != nullptr && pre -> val > root -> val) {
+                    y = root;
+                    if (x == nullptr) {
+                        x = pre;
+                    }
+                }
+                pre = root;
+                root = root -> right; // 没有左节点 就访问左节点
+            }
+        }
+        if (x != nullptr && y != nullptr) {
+            swap(x -> val, y -> val);
+        }
+    }
+};
+```
+
