--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -52,6 +52,7 @@
   - [165.比较版本号 [Medium]](#165比较版本号-medium)
   - [468. 验证IP地址](#468-验证ip地址)
   - [767. 重构字符串](#767-重构字符串)
+  - [340. 至少包含K个不同字符的最长子串](#340-至少包含k个不同字符的最长子串)
   - [1044. 最长重复子串*](#1044-最长重复子串)
 
 <!-- /code_chunk_output -->
@@ -2564,6 +2565,44 @@ public:
             } 
         }
         return res;
+    }
+};
+```
+### 340. 至少包含K个不同字符的最长子串
+> 给定一个字符串 s ，找出 至多 包含 k 个不同字符的最长子串 T。
+```
+输入: s = "eceba", k = 2
+输出: 3
+解释: 则 T 为 "ece"，所以长度为 3。
+```
+- 使用滑动窗口+双指针进行操作：
+  - **用hash表记录当前窗口内的字符(记录字符出现的频次)**，当表长度超过k后进行left删除操作
+- 时间复杂度 O(N) 空间复杂度 O(N)
+- 进阶优化： 使用LRU缓存思想，利用hash表存储字符出现的位置
+
+```c++
+class Solution {
+public:
+    int lengthOfLongestSubstringKDistinct(string s, int k) {
+        unordered_map<char, int> mps;
+        int n = s.size();
+        int left = 0;
+        int right = 0;
+        int ans = 0;
+        while (right < n) {
+            mps[s[right]]++;
+            right++;
+            // 对于超出的窗口的进行删除 最坏情况下：O(Nk)
+            while (mps.size() > k && left < n) {
+                mps[s[left]]--;
+                if (mps[s[left]] == 0) {
+                    mps.erase(s[left]);
+                }
+                left++;
+            }
+            ans = max(ans, right - left);
+        }
+        return ans;
     }
 };
 ```
